src/objects/Queue_Name__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Admin_Email_ID__c</fullName>
        <label>Admin Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailBodyPartOne__c</fullName>
        <label>EmailBodyPartOne</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailBodyPartTwo__c</fullName>
        <label>EmailBodyPartTwo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QueueID__c</fullName>
        <label>QueueID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Queue Name</label>
</CustomObject>